[package]
name = "mackenzie_bot"
version = "0.1.0"
authors = ["Mackenzie Armstrong <jearmstrong21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.7.3"
serenity = { version = "0.9.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
